WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225906
Enabling IPC testing API should prevent WebContent process from getting terminated in more cases
https://bugs.webkit.org/show_bug.cgi?id=225906
Summary
Enabling IPC testing API should prevent WebContent process from getting termi...
Ryosuke Niwa
Reported
2021-05-17 21:13:13 PDT
There are a few more cases in which WebContent process were hitting debug assertions and/or getting killed by GPU Process. Avoid that.
Attachments
Patch
(7.79 KB, patch)
2021-05-17 21:17 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2021-05-17 21:17:45 PDT
Created
attachment 428911
[details]
Patch
Ryosuke Niwa
Comment 2
2021-05-17 22:15:18 PDT
Comment on
attachment 428911
[details]
Patch Clearing flags on attachment: 428911 Committed
r277641
(
237847@main
): <
https://commits.webkit.org/237847@main
>
Ryosuke Niwa
Comment 3
2021-05-17 22:15:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-05-17 22:16:20 PDT
<
rdar://problem/78138794
>
Jonathan Bedard
Comment 5
2021-05-18 13:35:38 PDT
This broke a webkitpy test about WebKit's IPC messages:
https://results.webkit.org/?suite=webkitpy-tests&test=webkit.messages_unittest.GeneratedFileContentsTest.test_receiver
Ryosuke Niwa
Comment 6
2021-05-18 13:38:58 PDT
(In reply to Jonathan Bedard from
comment #5
)
> This broke a webkitpy test about WebKit's IPC messages: >
https://results.webkit.org/?suite=webkitpy-tests&test=webkit
. > messages_unittest.GeneratedFileContentsTest.test_receiver
WTF... why do we have tests in webkitpy?
Ryosuke Niwa
Comment 7
2021-05-18 14:04:34 PDT
Committed
r277677
(
237878@main
): <
https://commits.webkit.org/237878@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug