Enabling IPC testing API should prevent WebContent process from getting terminated in more cases https://bugs.webkit.org/show_bug.cgi?id=225906

Reviewed by Wenson Hsieh.

Avoid hitting debug assertions in WebContent process when a dispatched message isn't processed
in a message receivers and don't kill WebContent process in GPU processs when RemoteRenderingBackend
receives a bad IPC message.

Also fixed a typo in encodeSharedMemory where we were exiting early when the protection was ReadWrite
instead of when it was not ReadWrite or ReadOnly.

These fixes are needed to land tests for recent GPU process fixes.

* GPUProcess/graphics/RemoteRenderingBackend.cpp:
* Scripts/webkit/messages.py:
(generate_message_handler):
* WebProcess/WebPage/IPCTestingAPI.cpp:
(WebKit::IPCTestingAPI::encodeSharedMemory):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::ensureGPUProcessConnection):


Canonical link: https://commits.webkit.org/237847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277641 268f45cc-cd09-0410-ab3c-d52691b4dbfc